:sparkles: | Add route

--- a/src/views/layout.ejs
+++ b/src/views/layout.ejs
@@ -10,6 +10,11 @@
     />
   </head>
   <body>
+    <header class="justify-content-md-center">
+      <div class="navbar navbar-dark primary-color justify-content-md-center">
+          <button class="navbar-brand"><a href="/add">Adicionar</a></button>
+      </div>
+    </header>
     <main>
       <div class="container"><%- body %></div>
     </main>
