:memo: | Finish the project

--- a/src/views/layout.ejs
+++ b/src/views/layout.ejs
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>Utilizando o EJS</title>
+    <title>Coordinates Stock/title>
     <link
       rel="stylesheet"
       type="text/css"
